fix(header-position): #MEN-389 overide overflow-y to make header hidden when scroll

--- a/scss/moodle/drawer.scss
+++ b/scss/moodle/drawer.scss
@@ -206,7 +206,7 @@ body.headroom--pinned {
 
 #page.drawers {
   margin-top: 0;
-  overflow-y: initial;
+  overflow-y: initial !important;
 }
 
 .uses-drawers {
